public repo, nove kluce a hesla, bezpecnost, landing-page
public repo, nove kluce a hesla, bezpecnost, landing-page

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,11 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 .vscode/*
 !.vscode/extensions.json
 .idea
